cmake_minimum_required(VERSION 3.16)
project(HinaPE_py)
find_package(Python 3.10...<3.11 COMPONENTS Interpreter Development REQUIRED)
if (APPLE)
    enable_language(OBJC)
endif ()
if (MSVC)
    set(PythonLibsNew_Dir ${Python_LIBRARY_DIRS})
endif ()
# add_subdirectory(HinaPE)
add_subdirectory(pybind11)
pybind11_add_module(HinaPE_py src/main.cpp)
# EXAMPLE_VERSION_INFO is defined by setup.py and passed into the C++ code
target_compile_definitions(HinaPE_py PRIVATE VERSION_INFO=${EXAMPLE_VERSION_INFO})
target_include_directories(HinaPE_py PUBLIC ${Python_INCLUDE_DIRS})
